--- a/css/style_form.css
+++ b/css/style_form.css
@@ -75,8 +75,9 @@ textarea {
   margin-bottom: 40px;
 }
 .modal-content{
-  background-color: rgba(0,0,0,0.9);
+  background-color: rgba(0, 0, 0, 0.6);
   width: 700px;
+  color: white;
 
 }
 .modal-content .form{
